# workday

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  docker-compose.yml  fetch.py  pyproject.toml  requirements.txt  scheduler.py
.github/workflows/: ci.yml
src/workday/: __init__.py  __main__.py  app.py  fetch.py  main.py  scheduler.py
