[project]
name = "workday"
version = "0.3.2"
dependencies = [
    "uvicorn>=0.27.1",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "watchdog>=4.0.0",
]
requires-python = ">= 3.8"

[project.scripts]
dev = "workday:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/workday"]