[project]
name = "workday"
version = "0.3.4"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "watchdog>=4.0.1",
    "filelock>=3.15.4",
]
requires-python = ">= 3.10"

[project.scripts]
workday = "workday:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "FA", # flake8 annotations
    "UP", # pyupgrade
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/workday"]
